# languagetool

./: Cargo.toml
crates/og-api/: Cargo.toml
crates/og-api/src/: handlers.rs  lib.rs  main.rs  pipeline.rs  request.rs  response.rs  server.rs
crates/og-api/tests/: api_integration.rs
crates/og-compat/: Cargo.toml
crates/og-compat/src/: compare.rs  lib.rs  report.rs
crates/og-core/: Cargo.toml
crates/og-core/src/: analyzed.rs  category.rs  checker.rs  document.rs  issue_type.rs  language.rs  lib.rs  rule.rs  rule_match.rs  token.rs
crates/og-langs/: Cargo.toml
crates/og-langs/src/: engine.rs  lib.rs  registry.rs
crates/og-langs/src/en/: avsan.rs  compound.rs  consistent_apostrophe.rs  contraction.rs  dash.rs  diacritics.rs  mod.rs  plain_english.rs  simple_replace.rs  specific_case.rs  style_frequency.rs  word_coherency.rs  word_repeat.rs  wrong_word_context.rs
crates/og-languagemodel/: Cargo.toml
crates/og-languagemodel/src/: lib.rs  ngram.rs
crates/og-rules/: Cargo.toml
crates/og-rules/src/: lib.rs  native_rules.rs  pattern_rule.rs  text_level_rules.rs
crates/og-spell/: Cargo.toml
crates/og-spell/src/: dictionary.rs  lib.rs  speller.rs  suggestion.rs
crates/og-tagger/: Cargo.toml
crates/og-tagger/src/: chunker.rs  disambiguator.rs  english_data.rs  english_tagger.rs  lib.rs  tagger.rs  xml_disambiguator.rs
crates/og-test-runner/: Cargo.toml
crates/og-test-runner/src/: fixture.rs  lib.rs  runner.rs
crates/og-tokenizer/: Cargo.toml
crates/og-tokenizer/src/: lib.rs  sentence_splitter.rs  word_tokenizer.rs
crates/og-xml/: Cargo.toml
crates/og-xml/src/: compiler.rs  disambig_parser.rs  disambig_types.rs  lib.rs  parser.rs  types.rs
docs/: rust-audit.md  rust-plan.md
