[package]
name = "og-compat"
version.workspace = true
edition.workspace = true

[dependencies]
og-core = { workspace = true }
og-api = { workspace = true }
og-langs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
