[package]
name = "og-rules"
version.workspace = true
edition.workspace = true

[dependencies]
og-core = { workspace = true }
og-xml = { workspace = true }
og-tokenizer = { workspace = true }
og-tagger = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
